# ros2_ws

./: .gitignore  README.md  camera_calib3.yaml  run_camera_pipeline.sh
apriltag_detection/: package.xml  setup.py
apriltag_detection/apriltag_detection/: apriltag_detector.py
apriltag_interfaces/: CMakeLists.txt  package.xml
dual_pid_docking/: package.xml  setup.cfg  setup.py
dual_pid_docking/dual_pid_docking/: uav1_node.py  uav2_node.py
dual_pid_docking/dual_pid_docking/launch/: dual_traj.launch.py
dual_pid_trajectory/: package.xml  setup.cfg  setup.py
dual_pid_trajectory/dual_pid_trajectory/: uav2_node.py
dual_pid_trajectory/dual_pid_trajectory/launch/: dual_traj.launch.py
dual_tecs_trajectory/: package.xml  setup.cfg  setup.py
dual_tecs_trajectory/dual_tecs_trajectory/: uav1_node.py  uav2_node.py
dual_tecs_trajectory/dual_tecs_trajectory/launch/: dual_traj.launch.py
dual_uav_pid/: setup.cfg  setup.py
dual_uav_pid/dual_uav_pid/: script2.py  uav1_node.py  uav2_node.py
dual_uav_pid/dual_uav_pid/launch/: dual_pid.launch.py
dual_uav_pid/my_package/: package.xml
dual_uav_ros2/: package.xml  setup.cfg  setup.py
dual_uav_ros2/dual_uav_ros2/: uav1_node.py  uav2_node.py
dual_uav_ros2/dual_uav_ros2/launch/: dual_uav.launch.py
dual_uav_ros2/msg/: TagPoseStamped.msg
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/apriltag_detection/lib/apriltag_detection/: apriltag_detector
install/apriltag_detection/share/apriltag_detection/: package.sh  package.xml
install/my_dual_nodes/lib/my_dual_nodes/: script1  script2
install/my_dual_nodes/share/my_dual_nodes/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_dual_nodes/share/my_dual_nodes/launch/: dual_launch.py
install/uav_control/lib/uav_control/: flight_controller  gps_follower
install/uav_control/share/uav_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/uav_following/lib/uav_following/: gps_follower  pbvs_landing
install/uav_following/share/uav_following/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/uav_following/share/uav_following/launch/: uav_following_launch.py
install/uav_mission/lib/uav_mission/: apriltag_detector  gps_follower
install/uav_mission/share/uav_mission/: package.sh  package.xml
install/uav_mission/share/uav_mission/launch/: uav_mission_launch.py
install/vtol_apriltag_control/lib/vtol_apriltag_control/: apriltag_detector  flight_controller
install/vtol_apriltag_control/share/vtol_apriltag_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  vtol_control.launch.py
log/: latest_build
my_dual_nodes/: package.xml  setup.cfg  setup.py
my_dual_nodes/launch/: dual_launch.py
my_dual_nodes/my_dual_nodes/: script1.py
my_uav_package/: package.xml  setup.cfg  setup.py
my_uav_package/launch/: mission_launch.py
my_uav_package/my_uav_package/: flight_controller.py  gps_follower.py  run_mission.py
uav_control/: package.xml  setup.py
uav_control/launch/: uav_launch.py
uav_control/uav_control/: flight_controller.py  gps_follower.py
uav_following/: setup.cfg  setup.py
uav_following/uav_following/: gps_follower.py
uav_landing/: package.xml  setup.cfg  setup.py
uav_landing/uav_landing/: landing_controller.py
uav_mission/: setup.py
uav_mission/uav_mission/: gps_follower.py
vtol_apriltag_control/: setup.cfg  setup.py
vtol_apriltag_control/vtol_apriltag_control/: flight_controller.py
