<?xml version="1.0"?>
<package format="3">
  <name>my_uav_package</name>
  <version>0.1.0</version>
  <description>ROS2 UAV Package for GPS Following and Flight Control</description>
  <maintainer email="your-email@example.com">Clara</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- DroneKit for GPS control -->
  <exec_depend>dronekit</exec_depend>

  <!-- MAVLink for external flight control -->
  <exec_depend>pymavlink</exec_depend>

  <!-- Build and Testing -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

