<?xml version="1.0"?>
<package format="3">
  <name>uav_control</name>
  <version>0.0.1</version>
  <description>ROS 2 package for UAV GPS following and external flight control</description>
  <maintainer email="your_email@example.com">clara</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>dronekit</exec_depend>
  <exec_depend>pymavlink</exec_depend>

  <export>
      <build_type>ament_python</build_type>
  </export>
</package>

