<package format="3">
  <name>uav_following</name>
  <version>0.0.1</version>
  <description>UAV GPS following and PBVS landing</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>dronekit</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

