<?xml version="1.0"?>
<package format="3">
  <name>vtol_apriltag_control</name>
  <version>0.1.0</version>
  <description>VTOL UAV external flight control using AprilTags and MAVLink.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pupil_apriltags</depend>

  <!-- MAVLink dependencies -->
  <exec_depend>pymavlink</exec_depend>
  <exec_depend>mavros</exec_depend>

  <!-- OpenCV is required for AprilTag detection -->
  <exec_depend>opencv</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

